fix: skill attribute relative text wrapping to other line

--- a/src/components/Skills/_Skills.scss
+++ b/src/components/Skills/_Skills.scss
@@ -32,6 +32,11 @@
         min-width: 10rem;
         cursor: pointer;
       }
+
+      &#skill-attRelative {
+        white-space: nowrap; 
+        overflow: hidden;
+      }
     }
   }
 
